2007-02-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b30

 * Fix: Handle case for no items in makeThumbnails()
 
 * Fix: Removed warning about uninitialized value in view_album
 
2007-02-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b29

 * Change: Added updateProgressBar() as php wrapper for the js function.
 
 * Change: Added scrollable div in view photo properties.
 
 * Change: Renamed makeThumbnailRecursive to makeThumbnails
 		   with recursivity as param.
 		   
 * Change: Added nice progressbar in rebuild thumbs.
 
 * New: Added possibility for easy setting in classic template for mainpage
        if one want to see creation/last change date and number of items.
        
2007-02-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b28

 * Fix: Removed debug code from tools/find_orphans
 
2007-02-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b27

 * New: Added Top5 voted feature. (RFE #929207)
       "Email me when comments are added -> recursively"
       
2007-02-09 Jens Tkotz <jens@peino.de> 1.6-RC1-b26

 * Change: Better Wording and handling for mail in config.
 
 * Change: Better wording for email-errormesages
 
2007-02-08 Jens Tkotz <jens@peino.de> 1.6-RC1-b25

 * Fix: Typo in PN Version check.
 
2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b24

 * Fix/Change:
   
   In postNuke 0.8, _PN_VERSION_NUM and _PN_VERSION_ID were renamed.
   Leading _ is removed.
   
   Invented new global $GALLERY_POSTNUKE_VERSION, set in index.php

 Thanks to 'tycho' from Forum.
 
2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b23

 * Change: Removed function dismiss() from lib/content.php
 
 * Change: Tweaked dismissAndLoad() so the url param is optional
 		   and thus it behaves like dismiss() did.
 		   
 * Change: dismiss() was only used popups/edit_thumb.php
 
 * Change: Autowidth to 800px if Imagewidth is > 400
 
 * Change: Little layout for cropImageBox
 
2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b22

 * Fix/Change: validate_albums
             - Some Links were broken