@@ -1,3 +1,15 @@
+2007-02-13 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b31
+
+ All in captionator:
+ 
+ * Fix: Better subalbum handling.
+ 
+ * Fix: Correct HTML
+ 
+ * Fix: Remove debug CSS.
+ 
+ * Change: Little perfomance tweak. Use $photo instead of ->album...($i)
+ 
 2007-02-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b30
 
  * Fix: Handle case for no items in makeThumbnails()
